--- a/ghar-tak/package.json
+++ b/ghar-tak/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.456.0",
     "next": "14.2.16",
+    "next-pwa": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-tabs": "^6.0.2",
     "swiper": "^11.1.15",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
